2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.4 ===

2009-02-06  Stefan Kost  <ensonic@users.sf.net>

	* gdk-pixbuf/gdk-pixbuf.sgml:
	* gdk/gdk-docs.sgml:
	* gtk/gtk-docs.sgml:
	* libgail-util/gail-libgail-util-docs.sgml:
	  Add online urls for library.gnome.org. This allows other docs to do
          gtkdoc-rebase --online --html-dir=html
          before publishing docs and have working xrefs.
          Whitespece cleanup for gdk/gdk-docs.sgml.

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

2009-01-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

2009-01-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new image menu item api

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add GtkActivatableIface, too

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new GtkActivatable API

	* gtk/gtk-docs.sgml: Include GtkActivatable section

	* gtk.types: Add gtk_activatable_get_type

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Additions

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gdk/tmpl/properties.sgml: Typo fix

2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new GtkAction api
 
2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new scale api

2009-01-19  Matthias Clasen  <mclasen@redhat.com>
	
	* gdk/tmpl/cursors.sgml: Document GDK_BLANK_CURSOR.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new api

2009-01-13  Christian Dywan  <christian@imendio.com>

	Bug 567569 – Typo in GtkFileChooser example in GTK+ documentation

	* gtk/tmpl/gtkfilechooser.sgml: s/gobject_unref/g_object_unref.
        Patch by Priyank Gosalia.

2009-01-05  Matthias Clasen  <mclasen@redhat.com>
