@@ -5577,6 +5577,7 @@ gtk_window_set_role
 gtk_window_get_decorated
 gtk_window_get_deletable
 gtk_window_get_default_icon_list
+gtk_window_get_default_icon_name
 gtk_window_get_default_size
 gtk_window_get_destroy_with_parent
 gtk_window_get_frame_dimensions
