@@ -292,6 +292,8 @@ void       gtk_window_set_default_icon_list        (GList      *list);
 GList*     gtk_window_get_default_icon_list        (void);
 void       gtk_window_set_default_icon             (GdkPixbuf  *icon);
 void       gtk_window_set_default_icon_name        (const gchar *name);
+G_CONST_RETURN
+gchar     *gtk_window_get_default_icon_name        (void);
 gboolean   gtk_window_set_default_icon_from_file   (const gchar *filename,
 						    GError     **err);
 
